--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "@testing-library/user-event": "7.1.2",
     "axios": "0.19.1",
     "bootstrap": "4.4.1",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
+    "jest-enzyme": "^7.1.2",
     "prop-types": "15.7.2",
     "react": "16.12.0",
     "react-dom": "16.12.0",
